--- a/index.html
+++ b/index.html
@@ -27,14 +27,15 @@ body {
 
 /* Header */
 header {
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background: rgba(28,42,28,0.85);
-  height: 60px;
   position: sticky;
   top:0;
-  z-index:5;
+  z-index:10;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  background: rgba(28,42,28,0.85);
+  height: 60px;
+  padding:0 20px;
   box-shadow: 0 4px 20px var(--shadow);
   backdrop-filter: blur(6px);
 }
@@ -42,92 +43,94 @@ header h1 {
   color: var(--green1);
   font-size: 32px;
   text-shadow: 0 0 6px rgba(46,204,113,0.4);
+  margin:0;
 }
 
 /* Навигация */
-.fg {
+.nav-links {
   display:flex;
-  flex-wrap:wrap;
-  justify-content:center;
   gap:10px;
-  background: rgba(28,42,28,0.85);
-  padding:10px;
-  z-index:4;
-  border-radius:8px;
 }
-.fg button {
-  text-decoration:none;
-  background-color: var(--dark-card);
-  padding: 10px 20px;
-  border-radius:12px;
+.nav-links button {
+  background: var(--dark-card);
   color: var(--text-light);
-  transition: 0.3s ease;
+  border:none;
+  padding:10px 20px;
+  border-radius:12px;
   cursor:pointer;
   box-shadow: 0 0 8px rgba(46,204,113,0.3);
-  border:none;
-  font-size:16px;
+  transition:0.3s;
 }
-.fg button:hover {
+.nav-links button:hover {
   background: var(--green2);
   color: var(--dark-bg);
-  box-shadow:0 0 12px rgba(46,204,113,0.6);
+  box-shadow: 0 0 12px rgba(46,204,113,0.6);
 }
 
-/* Аккордеон */
-.accordion {
-  width: 90%;
-  max-width: 800px;
-  margin: 20px auto;
-  border-radius:12px;
-  overflow:hidden;
-  box-shadow:0 0 24px rgba(46,204,113,0.2);
-}
-.accordion-item {
-  background: var(--dark-card);
-  margin-bottom:5px;
-  border-radius:12px;
-  overflow:hidden;
-}
-.accordion-header {
-  padding:15px 20px;
+/* Гамбургер */
+.hamburger {
+  display:none;
+  flex-direction: column;
+  justify-content: space-around;
+  width:30px;
+  height:25px;
   cursor:pointer;
-  font-weight:bold;
-  color: var(--green1);
-  position: relative;
-  user-select:none;
 }
-.accordion-header::after {
-  content: '+';
-  position:absolute;
-  right:20px;
-  font-size:20px;
-  transition: transform 0.3s;
-}
-.accordion-header.active::after {
-  content: '-';
-}
-.accordion-body {
-  max-height:0;
-  overflow:hidden;
-  transition: max-height 0.4s ease, padding 0.4s ease;
-  padding:0 20px;
-}
-.accordion-body p {
-  margin:10px 0;
-  line-height:1.5;
-  font-size:16px;
+.hamburger div {
+  width:100%;
+  height:3px;
+  background: var(--green1);
+  border-radius:2px;
+  transition: all 0.3s ease;
 }
 
-/* Секции с изображениями */
-.accordion-body img {
-  width:100%;
-  max-width:300px;
+/* Мобильное меню */
+.mobile-menu {
+  display:none;
+  flex-direction: column;
+  background: var(--dark-card);
+  position: absolute;
+  top:60px;
+  right:20px;
   border-radius:12px;
-  display:block;
-  margin:10px auto;
+  overflow:hidden;
+  box-shadow:0 0 16px rgba(46,204,113,0.3);
+}
+.mobile-menu button {
+  padding:12px 20px;
+  width:100%;
+  text-align:left;
+  border-bottom:1px solid rgba(46,204,113,0.2);
+}
+.mobile-menu button:last-child { border-bottom:none; }
+
+/* Контент */
+section {
+  display:flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  gap:25px;
+  padding:25px;
+}
+section img {
+  max-width:300px;
+  width:100%;
+  border-radius:20px;
   border:1px solid var(--green1);
   box-shadow:0 0 16px rgba(46,204,113,0.2);
 }
+.content {
+  background: linear-gradient(145deg, rgba(28,42,28,0.85), rgba(28,42,28,0.7));
+  border-radius:20px;
+  padding:25px;
+  max-width:500px;
+  flex:1;
+  border:1px solid var(--green2);
+  box-shadow:0 0 24px rgba(46,204,113,0.3), 0 0 40px rgba(39,174,96,0.2);
+}
+.content.dark { background: linear-gradient(145deg, rgba(20,30,20,0.85), rgba(20,30,20,0.7)); }
+.content .odin { font-size:20px; margin-bottom:12px; text-align:center; text-shadow:0 0 6px rgba(46,204,113,0.4);}
+.content .text { font-size:16px; line-height:1.5; }
 
 /* Кнопка наверх */
 #topBtn {
@@ -146,9 +149,7 @@ header h1 {
   display:none;
   z-index:10;
 }
-#topBtn:hover {
-  background: var(--green2);
-}
+#topBtn:hover { background: var(--green2); }
 
 /* Footer */
 footer {
@@ -174,16 +175,12 @@ footer {
 .blob.b1 { width: 350px; height: 350px; top:-80px; left:-80px; background: var(--green2);}
 .blob.b2 { width: 300px; height: 300px; bottom:-100px; right:-100px; background: var(--green1); animation-duration:18s;}
 .blob.b3 { width: 250px; height: 250px; top:30%; right:20%; background: #1abc9c; animation-duration:20s;}
-@keyframes float {
-  0%,100% { transform: translateY(0) scale(1); }
-  50% { transform: translateY(-20px) scale(1.02); }
-}
+@keyframes float {0%,100% { transform: translateY(0) scale(1); } 50% { transform: translateY(-20px) scale(1.02); }}
 
 /* Мобильная адаптация */
 @media(max-width:768px){
-  header h1{font-size:28px;}
-  .fg{flex-direction:column;align-items:center;}
-  .fg button{width:90%; text-align:center;}
+  .nav-links { display:none; }
+  .hamburger { display:flex; }
 }
 </style>
 </head>
@@ -195,90 +192,78 @@ footer {
 
 <header>
   <h1>РОМА</h1>
+  <div class="nav-links">
+    <button onclick="scrollToDiv('bio')">БИОГРАФИЯ</button>
+    <button onclick="scrollToDiv('int')">ИНТЕРЕСЫ</button>
+    <button onclick="scrollToDiv('auth')">АВТОР САЙТА</button>
+    <button onclick="scrollToDiv('cont')">КОНТАКТЫ</button>
+  </div>
+  <div class="hamburger" id="hamburger">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
 </header>
 
-<div class="fg">
-  <button data-target="bio">БИОГРАФИЯ</button>
-  <button data-target="int">ИНТЕРЕСЫ</button>
-  <button data-target="auth">АВТОР САЙТА</button>
-  <button data-target="cont">КОНТАКТЫ</button>
+<div class="mobile-menu" id="mobileMenu">
+  <button onclick="scrollToDiv('bio')">БИОГРАФИЯ</button>
+  <button onclick="scrollToDiv('int')">ИНТЕРЕСЫ</button>
+  <button onclick="scrollToDiv('auth')">АВТОР САЙТА</button>
+  <button onclick="scrollToDiv('cont')">КОНТАКТЫ</button>
 </div>
 
-<div class="accordion">
-
-  <div class="accordion-item" id="bio">
-    <div class="accordion-header">БИОГРАФИЯ</div>
-    <div class="accordion-body">
-      <img src="roma.jpg" alt="Рома">
-      <p>Рома или как некоторые называют - "ослоёб"</p>
-      <p>Рома - легенда, ему 16 лет, проживает в стране Словакия, и он крутой тип. Он находится в крутом чате "Одмен чата умир" и принимает там активное участие!!! Он слегка туповат но одновременно и умный. Раньше он жил сам в общаге, но сейчас он снимает квартиру и живёт в кайф. Был в Египте и других странах. Как друг он 6/10 — прикольный.</p>
-    </div>
+<section id="bio">
+  <img src="roma.jpg" alt="Рома">
+  <div class="content">
+    <p class="odin">Рома или как некоторые называют - "ослоёб"</p>
+    <p class="text">Рома - легенда, ему 16 лет, проживает в стране Словакия, и он крутой тип. Он находится в крутом чате "Одмен чата умир" и принимает там активное участие!!! Он слегка туповат но одновременно и умный. Раньше он жил сам в общаге, но сейчас он снимает квартиру и живёт в кайф. Был в Египте и других странах. Как друг он 6/10 — прикольный.</p>
   </div>
+</section>
 
-  <div class="accordion-item" id="int">
-    <div class="accordion-header">ИНТЕРЕСЫ</div>
-    <div class="accordion-body">
-      <img src="samokat.jpg" alt="Самокат">
-      <p>Интересы у Романа очень крутые</p>
-      <p>Ему нравится кататься на его крутом самокате. Любит общаться с нами в чатике. Недавно из-за другого чела (Coolfire) у Романа появился интерес делать ставки. Ещё он работает в сфере грузоперевозок и ему нравится. А раньше искал общение через дайвинчик, но перестал, потому что там одни странные люди.</p>
-    </div>
+<section id="int">
+  <img src="samokat.jpg" alt="Самокат">
+  <div class="content dark">
+    <p class="odin">Интересы у Романа очень крутые</p>
+    <p class="text">Ему нравится кататься на его крутом самокате. Любит общаться с нами в чатике. Недавно из-за другого чела (Coolfire) у Романа появился интерес делать ставки. Ещё он работает в сфере грузоперевозок и ему нравится. А раньше искал общение через дайвинчик, но перестал, потому что там одни странные люди.</p>
   </div>
+</section>
 
-  <div class="accordion-item" id="auth">
-    <div class="accordion-header">АВТОР САЙТА</div>
-    <div class="accordion-body">
-      <img src="matvey.jpg" alt="Матвей">
-      <p>Матвей</p>
-      <p>Самый крутой программист, который создал этот замечательный сайт.</p>
-    </div>
+<section id="auth">
+  <img src="matvey.jpg" alt="Матвей">
+  <div class="content">
+    <p class="odin">Матвей</p>
+    <p class="text">Самый крутой программист, который создал этот замечательный сайт.</p>
   </div>
+</section>
 
-  <div class="accordion-item" id="cont">
-    <div class="accordion-header">КОНТАКТЫ</div>
-    <div class="accordion-body">
-      <p>ГДЕ НАЙТИ РОМАНА?</p>
-      <p>Телеграм: <b>@fovinventor</b><br>Пишите! Он с радостью ответит.</p>
-      <img src="image.png" alt="Telegram QR">
-    </div>
+<section id="cont">
+  <div class="content dark">
+    <p class="odin">ГДЕ НАЙТИ РОМАНА?</p>
+    <p class="text">Телеграм: <b>@fovinventor</b><br>Пишите! Он с радостью ответит.</p>
+    <img src="image.png" alt="Telegram QR">
   </div>
-
-</div>
+</section>
 
 <button id="topBtn">&#8679;</button>
 
 <footer>&copy; 2025 Roma</footer>
 
 <script>
-// Аккордеон
-const headers = document.querySelectorAll('.accordion-header');
-headers.forEach(header=>{
-  header.addEventListener('click', ()=>{
-    header.classList.toggle('active');
-    const body = header.nextElementSibling;
-    if(body.style.maxHeight){
-      body.style.maxHeight = null;
-      body.style.padding = "0 20px";
-    } else{
-      body.style.maxHeight = body.scrollHeight + "px";
-      body.style.padding = "15px 20px";
-    }
-  });
+// Скролл к секции
+function scrollToDiv(id){
+  window.scrollTo({top: document.getElementById(id).offsetTop-60, behavior:'smooth'});
+  if(window.innerWidth <= 768){ mobileMenu.style.display='none'; hamburger.classList.remove('active'); }
+}
+
+// Гамбургер
+const hamburger = document.getElementById('hamburger');
+const mobileMenu = document.getElementById('mobileMenu');
+hamburger.addEventListener('click', ()=>{
+  hamburger.classList.toggle('active');
+  mobileMenu.style.display = mobileMenu.style.display === 'flex' ? 'none' : 'flex';
 });
 
-// Навигация к аккордеону
-document.querySelectorAll('.fg button').forEach(btn=>{
-  btn.addEventListener('click', ()=>{
-    const target = document.getElementById(btn.dataset.target);
-    const header = target.querySelector('.accordion-header');
-    header.classList.add('active');
-    const body = header.nextElementSibling;
-    body.style.maxHeight = body.scrollHeight + "px";
-    body.style.padding = "15px 20px";
-    window.scrollTo({top: target.offsetTop-60, behavior:'smooth'});
-  });
-});
-
-// Кнопка "Наверх"
+// Кнопка наверх
 const topBtn = document.getElementById('topBtn');
 window.onscroll = ()=>{ topBtn.style.display = (document.body.scrollTop>100 || document.documentElement.scrollTop>100)? "block":"none"; };
 topBtn.onclick = ()=>{ window.scrollTo({top:0, behavior:'smooth'}); };
